--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ footer-links:
   flickr: 
   github: jantawan
   instagram: 
-  linkedin: 
-  pinterest: 
+  linkedin: jantawan-piyawat
+  pinterest: jantawan
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: jekyllrb
+  twitter: jantawan
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
 
 # Your disqus shortname, entering this will enable commenting on posts
